--- a/src/Components/LandingPage/Projects/project_list.json
+++ b/src/Components/LandingPage/Projects/project_list.json
@@ -1,30 +1,42 @@
 [
     {
         "name": "AiTudier",
-        "position": "Fornt-End Development Intern",
+        "position": "Front-End Development Intern",
+        "shortDescription": "",
+        "language": "ReactJS",
         "termStart": "2022-07",
         "termEnd": "2022-08",
-        "image": ""
+        "image": "",
+        "dir": "/AiTudier"
     },
     {
         "name": "Post Expired",
         "position": "Team Leader",
+        "shortDescription": "",
+        "language": "MERN Stack",
         "termStart": "2022-06",
         "termEnd": "Present",
-        "image": ""
+        "image": "",
+        "dir": "/PostExpired"
     },
     {
         "name": "HostFam",
         "position": "Individual Project",
+        "shortDescription": "",
+        "language": "MERN Stack",
         "termStart": "2021-01",
         "termEnd": "2021-07",
-        "image": "/img/projects_cover/HostFam.png"
+        "image": "/img/projects_cover/HostFam.png",
+        "dir": "/HostFam"
     },
     {
-        "name": "Wettown Study Hall Sign-In Application",
+        "name": "Wettown Study Hall Sign-In",
         "position": "Team Leader",
+        "shortDescription": "",
+        "language": "LAMP Stack",
         "termStart": "2017-12",
         "termEnd": "2019-01",
-        "image": "/img/projects_cover/WT_SHSI.jpg"
+        "image": "/img/projects_cover/WT_SHSI.jpg",
+        "dir": "/WT_SHSI"
     }
 ]
