--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-instagram-embed": "^3.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.19.0",
